--- a/eatgo-api/build.gradle
+++ b/eatgo-api/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'junit:junit:4.12'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	compileOnly 'org.projectlombok:lombok'
 
