--- a/eatgo-admin-api/build.gradle
+++ b/eatgo-admin-api/build.gradle
@@ -19,6 +19,8 @@ repositories {
 }
 
 dependencies {
+	implementation project(':eatgo-common')
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'junit:junit:4.12'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
