--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ eatgo-web/node_modules
 eatgo-customer-api/src/main/resources/application-jwt_secret.yml
 eatgo-login-api/src/main/resources/application-jwt_secret.yml
 eatgo-restaurant-api/src/main/resources/application-jwt_secret.yml
+
+data
